# Earnings_Calendar_Engine

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0196def0c66c_add_strategy_type_to_scan_results.py  66e86b04c216_add_v4_layer_and_account_tracking.py  a1b2c3d4e5f6_add_backtest_tables.py  cc09f327c5dc_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  enums.py  errors.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  backtest.py  earnings.py  market_data.py  options.py  scan.py  settings.py  trade.py  universe.py
backend/app/providers/: base.py  registry.py
backend/app/schemas/: backtest.py  earnings.py  explain.py  health.py  scan.py  settings.py  trade.py  universe.py
backend/app/services/: _price_fallback.py  audit.py  backtesting.py  base_strategy.py  liquidity.py  scan_persistence.py  scan_pipeline.py  scheduler.py  scoring.py  settings_persistence.py  trade_builder.py  ws_manager.py
backend/scripts/: audit_spot_check.py  live_validation.py  tt_oauth_setup.py
backend/tests/: conftest.py  test_api.py  test_audit.py  test_e2e.py  test_guardrails.py  test_health.py  test_liquidity.py  test_live_providers.py  test_persistence.py  test_providers.py  test_rate_limiter.py  test_scan_pipeline.py  test_scoring.py  test_settings_persistence.py  test_strategies.py  test_trade_builder.py  test_ws.py
(+58 files in other folders)
