[tool.poetry]
name = "earnings-calendar-engine"
version = "0.1.0"
description = "Pre-earnings Double Calendar Scanner and Builder for liquid U.S. equities"
authors = ["Earnings Calendar Engine Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
httpx = "^0.28.0"
numpy = "^2.1.0"
pandas = "^2.2.0"
scipy = {version = "^1.14.0", optional = true}
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
